manifests/paperless/manifest.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: paperless-postgresql
  namespace: tools
  labels:
    app: paperless-postgresql
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  serviceName: paperless-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app: paperless-postgresql
  template:
    metadata:
      name: paperless-postgresql
      labels:
        app: paperless-postgresql
    spec:
      serviceAccountName: default
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: paperless-postgresql
                namespaces:
                  - tools
                topologyKey: kubernetes.io/hostname
              weight: 1
      securityContext:
        fsGroup: 1000
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: "bitnami/postgresql:13"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1000
          ports:
            - containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "paperless" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "paperless" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: paperless-postgresql
      spec:
        selector:
          matchLabels:
            app: paperless-db
        accessModes:
          - "ReadWriteOnce"
        storageClassName: freenas-iscsi-manual-csi
        resources:
          requests:
            storage: "10Gi"

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: paperless
  namespace: tools
  labels:
    app: paperless
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        fsGroup: 1000
      containers:
        - name: paperless
          image: "paperlessngx/paperless-ngx:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources: {}
          volumeMounts:
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: data
              mountPath: /usr/src/paperless/data
            - name: export
              mountPath: /usr/src/paperless/export
            - name: media
              mountPath: /usr/src/paperless/media
      volumes:
        - name: consume
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-consume
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-data
        - name: export
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-export
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-paperless-media

---
kind: Service
apiVersion: v1
metadata:
  name: paperless-postgresql-hl
  namespace: tools
  labels:
    app: paperless-postgresql
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  selector:
    app: paperless-postgresql
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432

---
kind: Service
apiVersion: v1
metadata:
  name: paperless
  namespace: tools
  labels:
    app: paperless
spec:
  selector:
    app: paperless
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: paperless
  namespace: tools
  labels:
    app: paperless
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
spec:
  ingressClassName: nginx-private
  rules:
    - host: paperless.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 8000
  tls:
    - hosts:
        - paperless.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl
